--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "sass-loader": "^11.0.1",
     "swiper": "^6.3.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
